edition = "2023";
package ingenuity;

option go_package = "github.com/ouijan/ingenuity/pkg/net/packet;";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message Packet {
  uint64 PacketId = 1;
  google.protobuf.Timestamp Timestamp = 2;
  oneof packet_data {
    Acknowledgement Acknowledgement = 3;
    Message Message = 4;
    Sync Sync = 5;
  }
}

message Acknowledgement {
  uint64 PacketId = 1;
}

message Message {
  string Data = 1;
}

message Sync {
  uint64 NetworkEntityId = 1;
  bool IsLocal = 2;
  uint64 CommandFrameStart = 3;
  uint64 CommandFrameEnd = 4;
  repeated FrameDelta Deltas = 5;

  message FrameDelta {
    uint64 CommandFrame = 1;
    repeated InstanceDelta Changes = 2;
  }

  message InstanceDelta {
    uint64 InstanceId = 1;
    bool Created = 2;
    bool Destroyed = 3;
    google.protobuf.Struct Changes = 4;
  }
}

